[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Area/Main.png" type="Texture" id=1]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StageMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 621.0
margin_bottom = 787.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 170.0
margin_right = 550.0
margin_bottom = 242.0
custom_constants/separation = 51

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 470.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "KEYBOARD WARRIOR"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 225.0
margin_top = 291.0
margin_right = 413.0
margin_bottom = 681.0
custom_constants/separation = 50

[node name="Stage1" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "STAGE 1"

[node name="Stage2" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 188.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "STAGE 2"

[node name="Infinite" type="Button" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 188.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "INFINITE"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 330.0
margin_right = 188.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 2 )
text = "BACK"

[connection signal="pressed" from="VBoxContainer/Stage1" to="." method="_on_Stage1_pressed"]
[connection signal="pressed" from="VBoxContainer/Stage2" to="." method="_on_Stage2_pressed"]
[connection signal="pressed" from="VBoxContainer/Infinite" to="." method="_on_Synonym_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
