extends Control





func _on_Stage1_pressed():
	get_tree().change_scene("res://Stage1.tscn")


func _on_Stage2_pressed():
	pass # Replace with function body.


func _on_Stage3_pressed():
	pass # Replace with function body.


func _on_Synonym_pressed():
	pass # Replace with function body.


func _on_Back_pressed():
	get_tree().change_scene("res://MainMenu.tscn")
